src/main/java/com/example/connectedappliance/shared/error/ValidationItem.java
package com.example.connectedappliance.shared.error;

public record ValidationItem(String field, String code, String message) {
}
